# oauth2_sandbox

./: Dockerfile  README.md  build.yml  docker-compose.yml  ecs_dev.yml  local_deploy.sh  manage.py  pyproject.toml  secrets.env
nginx/: default.conf.template  nginx-staging.conf  staging.Dockerfile
oauthref/: settings.py  urls.py  views.py  wsgi.py
