[tool.poetry]
name = "oauthref"
version = "0.1.0"
description = "OAuth client reference implementation"
authors = ["Seh Hui, Leong <sehhui@infin8co.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
oauthlib = "^3.2.2"
Authlib = "^1.1.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
known_django = ["django", "rest_framework"]
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
